- Updated google maps content plugin to enable > 1 map on a page and updated JS api
- Updated Vimeo content plugin
- Added variable for the pageinfo icon location being top/bottom
- Added PageTitle as option to the heading content item #127
- Fixed Search not working on Content pages #123
- Block subpages fixed #116
- Added ajax activating/de-activating of content items inside editpage


Version 4.0.1
-------------

Summary of changes:
- Several bugs are solved
- added validation checks for YouTube contenttype
- Implemented hooks for Html Contenttype (reinstalls ALL hooks on upgrade!) 
- removed all direct connection with Scribite module (uses hooks instead)


Version 4.0.0
-------------

This version is converted to a pure Zikula 1.3 version. This means it is not compatible with 
Zikula 1.2.x any more.

Version 3.2.1
-------------

Summary of changes:
- Several bugs are solved
- The table of contents plugin has been extended with more features (thanks mrtux)
- A new plugin for unfiltered content has been added
- A RSS template has been added for the extended page list

All tickets:
* Add #17 new content type: text not passed through output filter
* Add #29 general backend option: disable output filter
* Fix #192 Table structure: TEXT to LONGTEXT for con_data field
* Fix #75 Saving html content deletes content.
* Fix #173 Content block does not included root of selected subtree
* Add #197 RSS-Feed for the module
* Add #204 Add a check for pageData===false in page api
* Fix #213 interaction with menutree failed
* Fix #214 camtasia plugin - embedded is not working
* Add #215 camtasia plugin - use FirstFrame.png as preview picture
* Add #217 table of content plugin upgrade hides a lot of subpages
* Add #218 Content plugin for table of content does not included root of selected subtree
* Fix #221 RSS of Dizkus in Content
* Add #228 Facebook Like Box
* Add #229 Generic Iframe Content Type
* Fix #240 upgrade TOC from 3.1.0 to 3.2.1git shows empty TOC